--- a/_config.yml
+++ b/_config.yml
@@ -1,10 +1,10 @@
-ï»¿# Hexo Configuration
+# Hexo Configuration
 ## Docs: https://hexo.io/docs/configuration.html
 ## Source: https://github.com/hexojs/hexo/
 
 # Site
 title: YDDMAX
-subtitle: ä»£ç å¥”è…¾
+subtitle: ´úÂë±¼ÌÚ
 description: code rush
 author: yunzhu
 language: zh-Hans
