--- a/_config.yml
+++ b/_config.yml
@@ -1,10 +1,10 @@
-# Hexo Configuration
+ï»¿# Hexo Configuration
 ## Docs: https://hexo.io/docs/configuration.html
 ## Source: https://github.com/hexojs/hexo/
 
 # Site
 title: YDDMAX
-subtitle: ´úÂë±¼ÌÚ
+subtitle: ä»£ç å¥”è…¾
 description: code rush
 author: yunzhu
 language: zh-Hans
