--- a/_config.yml
+++ b/_config.yml
@@ -72,7 +72,7 @@ theme: next
 ## Docs: https://hexo.io/docs/deployment.html
 deploy:
   type: git
-  repo: https://github.com/YDDMAX/YDDMAX.github.io.git
+  repo: git@github.com:YDDMAX/YDDMAX.github.io.git
   branch: master
 # search
 search:
